# makefile_example

./: Makefile  Makefile.am  Makefile.in  chart.c  chart.h  charts.c  charts.h  circle.c  circle.h  circumference.c  circumference.h  configure  configure.ac  do_circle.c  do_circumference.c  humidity.c  humidity.h  main.c  pi.c  pi.h  print_humidity.c  print_temperature.c  temperature.c  temperature.h
